dataset1235/2025-2/2947369575/users/2007236882/executions/1003782500_48684178.log
== RUN (2025-09-01 22:30:22)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input())
lucro = (30/100)* total_de_vendas




print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:30:24)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input())
lucro = (30/100)* total_de_vendas




print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:30:44)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_de_vendas = float(input())
lucro = (30/100)* total_de_vendas




print(round(lucro,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:29:53)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input())
lucro = (30/100)* total_de_vendas




print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = (30/100)* total_de_vendas
                      ^^^^^^^^^^^^^^^
NameError: name 'total_de_vendas' is not defined. Did you mean: 'total_vendas'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
